Fix issue Text elements must have sufficient color contrast against the background

--- a/src/components/core/Input/Input.styles.module.scss
+++ b/src/components/core/Input/Input.styles.module.scss
@@ -2,6 +2,3 @@
   grid-template-columns: 80px 1fr;
   gap: 20px;
 }
-
-.input {
-}
